--- a/style.css
+++ b/style.css
@@ -37,18 +37,6 @@ header .heading {
   font-size: 32px;
 }
 
-.nav-list {
-  text-align: center;
-  padding: 10px 0;
-  margin: 0 auto;
-}
-
-.nav-list-item {
-  list-style: none;
-  display: inline-block;
-  margin: 0 20px;
-}
-
 .main-visual {
   width: 100%; /* 横幅いっぱい */
   height: 300px; /* 高さ300px */
@@ -58,24 +46,15 @@ header .heading {
 }
 
 .main-visual-content {
-  width: 40%; /* 横幅40% */
+  /* width: 40%; 横幅40% */
   height: 300px; /* 親の高さに揃える */
   background-color: rgba(0, 0, 0, 0.5); /* 背景色を半透明の黒にする */
-  text-align: center; /* 文字を中央揃えにする */
-  padding-top: 105px; /* 上側の内側余白で垂直方向の位置を調整 */
+  /* text-align: center; 文字を中央揃えにする */
+  /* padding-top: 105px; 上側の内側余白で垂直方向の位置を調整 */
 }
 
-.main-visual-text {
-  color: #fff; /* 文字色を白に変更 */
-}
-
-.main-visual-name {
-  margin-top: 30px; /* 上側の外側の余白 */
-  color: #fff; /* 文字色を白に変更 */
-}
-
-main {
-  width: 800px; /* 横幅800px */
+.main {
+  /* width: 800px; 横幅800px */
   display: flex; /* Flexboxの利用 */
   justify-content: center; /* 要素の横並び・中央寄せ */
   margin: 0 auto; /* 要素の中央揃え */
@@ -83,17 +62,22 @@ main {
 }
 
 .blog {
-  width: 540px;
+  /* width: 540px; */
   margin-right: 30px; /* 領域の右側余白 */
 }
 
 .blog-heading {
   border-bottom: 8px solid #f7f7f7;
+  line-height: 0.6;
+}
+
+.blog-heading-test {
+  border-bottom: 8px solid #f7f7f7;
   text-align: center;
   line-height: 0.6;
 }
 
-.blog-box {
+/* .blog-box {
   padding-top: 50px;
 }
 
@@ -103,7 +87,7 @@ main {
   border-bottom: 1px solid #f7f7f7;
   display: flex;
   justify-content: flex-start;
-}
+} */
 
 .blog-image {
   height: 180px;
@@ -147,9 +131,9 @@ main {
   line-height: 30px;
 }
 
-.sidebar {
+/* .sidebar {
   width: 230px;
-}
+} */
 
 .common-heading {
   border-bottom: 8px solid #f7f7f7;
